new images added

--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -9,7 +9,8 @@
 	"sync": {
 		"label": "Sincronización",
 		"connectionState": "Estado de conexión",
-		"pendingChanges": "Cambios pendientes"
+		"pendingChanges": "Cambios pendientes",
+		"force": "Forzar sincronización"
 	},
 	"app": {
 		"title": "Smart Wallet",
