--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -9,7 +9,8 @@
 	"sync": {
 		"label": "Synchronization",
 		"connectionState": "Connection State",
-		"pendingChanges": "Pending changes"
+		"pendingChanges": "Pending changes",
+		"force": "Force sync"
 	},
 	"app": {
 		"title": "Smart Wallet",
